Add author image and name to footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,11 @@ But it is the only way forward. Our future depends on it. I plead with you, my f
 This is not just a plea for political change. It is a plea for the soul of our nation, for the future of our children, and for the possibility of a world where we are truly united. We must believe it is possible. We must make it so.`;
 ---
 
-<Layout title={pageTitle}>
+<Layout 
+  title="My Awesome Blog"
+  description="Explore insights on national unity and healing"
+  image="/custom-og-image.jpg"
+>
   <DarkModeToggle />
   <ProgressBar />
 
