--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ interface Props {
 const { 
 	title, 
 	description = "A Call for National Unity: A Plea for Healing",
-	image = "/og-image.jpg"
+	image = "/Blogs/og-image.jpg"
 } = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
@@ -42,7 +42,7 @@ const ogImageURL = new URL(image, Astro.site);
 		<meta property="twitter:description" content={description} />
 		<meta property="twitter:image" content={ogImageURL} />
 	</head>
-	<body class="antialiased">
+	<body class="antialiased bg-pattern">
 		<slot />
 	</body>
 </html>
@@ -69,5 +69,9 @@ const ogImageURL = new URL(image, Astro.site);
 			background: #0f172a;
 			color: #f8fafc;
 		}
+	}
+
+	.bg-pattern {
+		background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 	}
 </style>
