--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ interface Props {
 const { 
 	title, 
 	description = "A Call for National Unity: A Plea for Healing",
-	image = "/Blogs/og-image.jpg"
+	image = "/Blogs/og-image.jpg"  // Make sure this is the correct path
 } = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
