--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ This is not just a plea for political change. It is a plea for the soul of our n
 <Layout 
   title="Overview Effect"
   description="Explore insights on national unity and healing"
-  image="/Blogs/custom-og-image.jpg"
+  image="/Blogs/og-image.jpg"
 >
   <DarkModeToggle />
   <ProgressBar />
